# conflict-duplication-detector

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
src/: __init__.py  main.py
src/agents/: __init__.py  conflict_detector_agent.py
src/analysis/: __init__.py  conflict_detector.py  duplication_detector.py  inconsistency_detector.py
src/knowledge/: __init__.py  document_loader.py  vector_store.py
src/utils/: __init__.py  text_utils.py
test_docs/: policy_v1.html
test_docs/policy_docs/: policy_v2.html
tests/: __init__.py  test_document_loader.py
